Drawing highlights, underline ready, implemented in hero. Rest of highlights pending, and also fix alignment due to new line height of h1s.

--- a/app/scss/global/_default.scss
+++ b/app/scss/global/_default.scss
@@ -3,6 +3,18 @@
 	@include border-box;
 }
 
+.tester{
+	z-index: 999999;
+	display: block;
+	background-color: rgba(0,255,0, 0.3);
+	position: fixed;
+	
+	right: 130px;
+
+	width: 251px;
+	height: 100%;
+}
+
 body{
 	font-family: $main-font;
 	color: $body-text-color;
